* more problems * null/ base case tests * code refactoring